move console max button to prevent scrollbar overlap

--- a/paul.zuehlcke.de/css/main.css
+++ b/paul.zuehlcke.de/css/main.css
@@ -120,5 +120,5 @@ a:focus {
 #consoleMax {
     position: absolute;
     top: 5px;
-    right: 5px;
+    right: 20px;
 }
